force-app/main/default/objects/Contact/fields/Acepta_terminos_y_condiciones__c.field-meta.xml
<CustomField>
    <fullName>Acepta_terminos_y_condiciones__c</fullName>
    <description>Acepto los terminos y condiciones?</description>
    <label>Acepta terminos y condiciones?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Decision</valueSetName>
    </valueSet>
</CustomField>