force-app/main/default/objects/Contact/fields/Aprobo__c.field-meta.xml
<CustomField>
    <fullName>Aprobo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Aprobó?</label>
    <type>Checkbox</type>
</CustomField>