force-app/main/default/objects/Contact/fields/Assessmentc__c.field-meta.xml
<CustomField>
    <fullName>Assessmentc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Contactos</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>