force-app/main/default/objects/Contact/fields/Atencion_al_detalle__c.field-meta.xml
<CustomField>
    <fullName>Atencion_al_detalle__c</fullName>
    <description>Campo de resultado del test gorilla</description>
    <label>Atencion al detalle</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>