force-app/main/default/objects/Contact/fields/Calificacion_Psicotecnica__c.field-meta.xml
<CustomField>
    <fullName>Calificacion_Psicotecnica__c</fullName>
    <description>calificacion que se da durante la entrevista psicotecnica</description>
    <label>Calificacion Psicotecnica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nivel</valueSetName>
    </valueSet>
</CustomField>