force-app/main/default/objects/Contact/fields/Calificacion_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>Calificacion_Tecnica__c</fullName>
    <description>Calificacion que se da durante la entrevista tecnica</description>
    <label>Calificacion Tecnica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nivel</valueSetName>
    </valueSet>
</CustomField>