force-app/main/default/objects/Contact/fields/Cargo2__c.field-meta.xml
<CustomField>
    <fullName>Cargo2__c</fullName>
    <description>Cargo que desempeñaba en la otra experiencia laboral registrada</description>
    <label>Otro cargo</label>
    <type>TextArea</type>
</CustomField>