force-app/main/default/objects/Contact/fields/Carne_de_vacunas_COVID_19__c.field-meta.xml
<CustomField>
    <fullName>Carne_de_vacunas_COVID_19__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida que ya se subio el carne de vacunas del empleado</description>
    <label>Carné de vacunas COVID-19</label>
    <type>Checkbox</type>
</CustomField>