force-app/main/default/objects/Contact/fields/Certificado_AFP__c.field-meta.xml
<CustomField>
    <fullName>Certificado_AFP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si se adjunto el Certificado AFP</description>
    <label>Certificado AFP</label>
    <type>Checkbox</type>
</CustomField>