force-app/main/default/objects/Contact/fields/Certificado_bancario__c.field-meta.xml
<CustomField>
    <fullName>Certificado_bancario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si ya se adjunto el certificado bancario</description>
    <label>Certificado bancario</label>
    <type>Checkbox</type>
</CustomField>