force-app/main/default/objects/Contact/fields/Certificado_contraloria__c.field-meta.xml
<CustomField>
    <fullName>Certificado_contraloria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si ya adjunto el certificado de la contraloria</description>
    <label>Certificado contraloria</label>
    <type>Checkbox</type>
</CustomField>