force-app/main/default/objects/Contact/fields/Certificado_EPS__c.field-meta.xml
<CustomField>
    <fullName>Certificado_EPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si ya se adjunto el certificado de la eps</description>
    <label>Certificado EPS</label>
    <type>Checkbox</type>
</CustomField>