force-app/main/default/objects/Contact/fields/Certificado_policia__c.field-meta.xml
<CustomField>
    <fullName>Certificado_policia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si ya se adjunto el certificado de la policia</description>
    <label>Certificado policía</label>
    <type>Checkbox</type>
</CustomField>