force-app/main/default/objects/Contact/fields/Certificado_procuraduria__c.field-meta.xml
<CustomField>
    <fullName>Certificado_procuraduria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si ya se adjunto el certificado de la procuraduria</description>
    <label>Certificado procuraduria</label>
    <type>Checkbox</type>
</CustomField>