force-app/main/default/objects/Contact/fields/Certificados_academicos__c.field-meta.xml
<CustomField>
    <fullName>Certificados_academicos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si ya se adjuntaron los certificados academicos</description>
    <label>Certificados académicos</label>
    <type>Checkbox</type>
</CustomField>