force-app/main/default/objects/Contact/fields/Certificados_personas_a_cargo__c.field-meta.xml
<CustomField>
    <fullName>Certificados_personas_a_cargo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si ya se adjunto el certificado de personas a cargo</description>
    <label>Certificados personas a cargo</label>
    <type>Checkbox</type>
</CustomField>