force-app/main/default/objects/Contact/fields/Ciudad_de_residencia__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_de_residencia__c</fullName>
    <description>Lista global que contiene la lista de los municipios de colombia</description>
    <label>Ciudad de residencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Municipio</valueSetName>
    </valueSet>
</CustomField>