force-app/main/default/objects/Contact/fields/Conocimientos_tecnicos__c.field-meta.xml
<CustomField>
    <fullName>Conocimientos_tecnicos__c</fullName>
    <description>Lista de conocimientos tecnicos con los que cuenta el contacto</description>
    <label>Conocimientos técnicos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conocimientos_tecnicos</valueSetName>
    </valueSet>
</CustomField>