force-app/main/default/objects/Contact/fields/Departamento_de_residencia__c.field-meta.xml
<CustomField>
    <fullName>Departamento_de_residencia__c</fullName>
    <description>Lista de departamentos de colombia</description>
    <label>Departamento de residencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departamento</valueSetName>
    </valueSet>
</CustomField>