force-app/main/default/objects/Contact/fields/Disponibilidad__c.field-meta.xml
<CustomField>
    <fullName>Disponibilidad__c</fullName>
    <description>especifica la disponibilidad de este empleado para una asignacion laboral</description>
    <label>Disponibilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponible</fullName>
            </value>
            <value>
                <fullName>No Disponible</fullName>
            </value>
            <value>
                <fullName>Disponible Medio Tiempo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>