force-app/main/default/objects/Contact/fields/Documento_de_identidad__c.field-meta.xml
<CustomField>
    <fullName>Documento_de_identidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si ya se adjunto el documento de identidad</description>
    <label>Documento de identidad</label>
    <type>Checkbox</type>
</CustomField>