force-app/main/default/objects/Contact/fields/Examen_medico__c.field-meta.xml
<CustomField>
    <fullName>Examen_medico__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida que se adjunto el examen medico</description>
    <label>Examen médico</label>
    <type>Checkbox</type>
</CustomField>