force-app/main/default/objects/Contact/fields/Fecha_de_finalizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_finalizaci_n__c</fullName>
    <description>Fecha de finalizacion en la experiencia laboral que registro</description>
    <label>Fecha de finalización</label>
    <type>Date</type>
</CustomField>