force-app/main/default/objects/Contact/fields/Fecha_de_finalizacion2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_finalizacion2__c</fullName>
    <description>Otra fecha de finalizacion de la experiencia laboral registrada</description>
    <label>Otra Fecha de finalización</label>
    <type>Date</type>
</CustomField>