force-app/main/default/objects/Contact/fields/Fecha_de_inicio2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio2__c</fullName>
    <description>Fecha de inicio de la otra experiencia laboral registrada</description>
    <label>Otra Fecha de inicio</label>
    <type>Date</type>
</CustomField>