force-app/main/default/objects/Contact/fields/Fecha_de_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_inicio__c</fullName>
    <description>Fecha en la que inicio en la empresa que registro como experiencia laboral</description>
    <label>Fecha de inicio</label>
    <type>Date</type>
</CustomField>