force-app/main/default/objects/Contact/fields/Feedback_Entrevista_Psicot_cnica__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Entrevista_Psicot_cnica__c</fullName>
    <description>Feedback registrado durante la entrevista psicotecnica</description>
    <label>Feedback Entrevista Psicotécnica</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>