force-app/main/default/objects/Contact/fields/Feedback_Entrevista_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Entrevista_Tecnica__c</fullName>
    <description>Feedback registrado por el entrevistador durante la entrevista tecnica</description>
    <label>Feedback Entrevista Tecnica</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>