force-app/main/default/objects/Contact/fields/Feedback_Terminos_y_Condiciones__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Terminos_y_Condiciones__c</fullName>
    <description>Feedback registrado por el entrevistador durante la entrevista para informar de los terminos y condiciones</description>
    <label>Feedback Terminos y Condiciones</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>