force-app/main/default/objects/Contact/fields/Hoja_de_vida__c.field-meta.xml
<CustomField>
    <fullName>Hoja_de_vida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valida si se adjunto la hoja de vida</description>
    <label>Hoja de vida</label>
    <type>Checkbox</type>
</CustomField>