force-app/main/default/objects/Contact/fields/Institucion_Educativa__c.field-meta.xml
<CustomField>
    <fullName>Institucion_Educativa__c</fullName>
    <description>Nombre de la institucion educativa donde obtuvo el titulo</description>
    <label>Institución Educativa</label>
    <type>TextArea</type>
</CustomField>