force-app/main/default/objects/Contact/fields/Institucion_educativa_actual__c.field-meta.xml
<CustomField>
    <fullName>Institucion_educativa_actual__c</fullName>
    <label>Institución educativa actual</label>
    <type>TextArea</type>
</CustomField>