force-app/main/default/objects/Contact/fields/Jefe_inmediato2__c.field-meta.xml
<CustomField>
    <fullName>Jefe_inmediato2__c</fullName>
    <description>Nombre del jefe inmediato en la otra experiencia laboral registrada</description>
    <label>Otro Jefe inmediato</label>
    <type>TextArea</type>
</CustomField>