force-app/main/default/objects/Contact/fields/Jefe_inmediato__c.field-meta.xml
<CustomField>
    <fullName>Jefe_inmediato__c</fullName>
    <label>Jefe inmediato</label>
    <type>TextArea</type>
</CustomField>