force-app/main/default/objects/Contact/fields/Matematicas_intermedias__c.field-meta.xml
<CustomField>
    <fullName>Matematicas_intermedias__c</fullName>
    <description>campo de calificacion del examen gorilla</description>
    <label>Matemáticas intermedias</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>