force-app/main/default/objects/Contact/fields/Nivel_actual__c.field-meta.xml
<CustomField>
    <fullName>Nivel_actual__c</fullName>
    <description>nivel en el que se encuentra de la carrera</description>
    <label>Nivel actual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nivel</valueSetName>
    </valueSet>
</CustomField>