force-app/main/default/objects/Contact/fields/Nivel_de_escolaridad__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_escolaridad__c</fullName>
    <description>Lista de seleccion con el grado de escolaridad alcanzado</description>
    <label>Nivel de escolaridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachiller</fullName>
            </value>
            <value>
                <fullName>Técnico</fullName>
            </value>
            <value>
                <fullName>Tecnólogo</fullName>
            </value>
            <value>
                <fullName>Profesional</fullName>
            </value>
            <value>
                <fullName>Especialización</fullName>
            </value>
            <value>
                <fullName>Maestría</fullName>
            </value>
            <value>
                <fullName>Doctorado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>