force-app/main/default/objects/Contact/fields/Nombre_de_la_empresa2__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_empresa2__c</fullName>
    <description>Nombre de la otra empresa que registro en la experiencia laboral</description>
    <label>Otro Nombre de la empresa</label>
    <type>TextArea</type>
</CustomField>