force-app/main/default/objects/Contact/fields/Nombre_de_la_empresa__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_empresa__c</fullName>
    <description>Nombre de la empresa a la que pertenecia</description>
    <label>Nombre de la empresa</label>
    <type>TextArea</type>
</CustomField>