force-app/main/default/objects/Contact/fields/Numero_de_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Identificacion__c</fullName>
    <description>Numero unico de identificacion del contacto</description>
    <label>Número de Identificación</label>
    <length>20</length>
    <type>Text</type>
</CustomField>