force-app/main/default/objects/Contact/fields/Tipo_de_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Identificacion__c</fullName>
    <label>Tipo de Identificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarjeta de Identidad</fullName>
            </value>
            <value>
                <fullName>Cédula de Ciudadanía</fullName>
            </value>
            <value>
                <fullName>Cédula de Extranjería</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>