force-app/main/default/objects/Contact/fields/Titulo_adquirido__c.field-meta.xml
<CustomField>
    <fullName>Titulo_adquirido__c</fullName>
    <description>Nombre del titulo que obtuvo</description>
    <label>Título adquirido</label>
    <type>TextArea</type>
</CustomField>