force-app/main/default/objects/Contact/fields/Titulo_al_que_aspira__c.field-meta.xml
<CustomField>
    <fullName>Titulo_al_que_aspira__c</fullName>
    <description>Nombre del titulo que se encuentra cursando</description>
    <label>Título al que aspira</label>
    <type>TextArea</type>
</CustomField>