force-app/main/default/objects/Contact/fields/Total_Gorilla__c.field-meta.xml
<CustomField>
    <fullName>Total_Gorilla__c</fullName>
    <description>Puntaje total del examen test gorilla</description>
    <label>Total Gorilla</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>