force-app/main/default/objects/Contact/recordTypes/Empleado_E_volution.recordType-meta.xml
<RecordType>
    <fullName>Empleado_E_volution</fullName>
    <active>true</active>
    <label>Empleado E-volution</label>
</RecordType>