force-app/main/default/objects/Contact/recordTypes/Empleado_Salesforce.recordType-meta.xml
<RecordType>
    <fullName>Empleado_Salesforce</fullName>
    <active>true</active>
    <description>Tipo de registro para los empleados de salesforce academy</description>
    <label>Empleado Salesforce</label>
</RecordType>