force-app/main/default/objects/Contact/listViews/Disponibles.listView-meta.xml
<ListView>
    <fullName>Disponibles</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Conocimientos_tecnicos__c</columns>
    <columns>Nivel_de_ingles__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Disponibilidad__c</field>
        <operation>equals</operation>
        <value>Disponible</value>
    </filters>
    <label>Disponibles</label>
</ListView>