force-app/main/default/objects/Contact/listViews/Empleados_Salesforce.listView-meta.xml
<ListView>
    <fullName>Empleados_Salesforce</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Empleado_Salesforce</value>
    </filters>
    <label>Empleados Salesforce</label>
    <sharedTo>
        <role>Entrenador_Salesforce</role>
    </sharedTo>
</ListView>